[#20757] Contacts unpublished visible in frontend. Thanks Christophe.
[#21042] When enabling/disabling the flash uploader, page refresh needed on 'Options > Save'. Thanks Omar.

19-Jun-2010 Mark Dexter
# [#21010] &nbsp; must not be used (Thanks Rouven)
# [#20634] Ordering Categories with integers doesn't work
# [#20483] After opening and saving plugin, plugin is removed [strict]

19-Jun-2010 Jean-Marie Simonet
[#21073] Media Manager image upload issue (front-end)
[#21039] Default path for install from directory missing. Thanks Artyom.
$ Added missing string
[#20966] Blog Order Down Doesn't Work In Some Cases. Thanks Mark.

18-Jun-2010 Jean-Marie Simonet
[#21046] menu - single article missing string + some
[#21049] frontpage editor image upload string error (Thanks Bill)
$ Adding strings in com_media.ini frontend
[#21062] admin com_media language file is loaded in frontend. Thanks Christophe. + some missing strings .
 
17-Jun-2010 Jean-Marie Simonet
# [#21019] Language field moved in a not visible position Thanks Airton.
# [#21041] Adjust JModelList list.start accordingly. Thanks Sven

17-Jun-2010 Christophe Demko
 # Correcting a small issue in JHtml::_includeRelativeFiles
 
16-Jun-2010 Christophe Demko
 # Fixed issue [#20941] incorrect selection after creating user account (Rune Sjøen)
 ^ Reformatting docblock comments

16-Jun-2010 Jean-Marie Simonet
$ [#21011] [patch] JERROR_NOLOGIN_BLOCKED on front end. Thanks Michael.
# [#20882] banner module count field accepts negative numbers. Thanks Elin.
# [#21014] JHtmlSlider library is buggy. Thanks Christophe.
# [#21030] Well formed error in com_installer. Thanks Christophe and Rouven.

15-Jun-2010 Mark Dexter
# Update version information to beta3
# Fix problem with hard-coding table prefix in sample data (Elin Waring)
# [#21025] Fix problem with hard-coding table prefix in update scripts

15-Jun-2010 Jean-Marie Simonet
$# Correcting a key/string
# [#20944] Cannot create new user - IE8. Thanks Christophe.