@@ -38,7 +38,7 @@ $app = &JFactory::getApplication();
 	<link rel="stylesheet" type="text/css" href="templates/<?php echo $this->template ?>/css/norounded.css" />
 <?php  endif; ?>
 
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 	function setFocus() {
 		document.login.username.select();
 		document.login.username.focus();
