@@ -10,7 +10,7 @@
 // no direct access
 defined('_JEXEC') or die;
 ?>
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 <!--
 	function submitbutton(pressbutton) {
 		var form = document.mailtoForm;
