@@ -1,6 +1,6 @@
 <?php // no direct access
 defined('_JEXEC') or die; ?>
-<script language="javascript" type="text/javascript">
+<script type="text/javascript">
 
 	function tableOrdering( order, dir, task )
 	{
